Pliki_YAML/my-sql.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-sql
  name: my-sql
  namespace: backend
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: node-role
            operator: In
            values:
              - B
  containers:
  - image: mysql
    name: my-sql
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
