Pliki_YAML/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
  namespace: backend
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 80
  selector:
    app: backend
  type: ClusterIP
status:
  loadBalancer: {}
