Pliki_YAML/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: my-sql
  name: my-sql
  namespace: backend
spec:
  ports:
  - port: 3307
    protocol: TCP
    targetPort: 3306
  selector:
    run: my-sql
  type: ClusterIP
status:
  loadBalancer: {}
